Redirect error output to std. output (will this contain benign warnings that later parsing needs to ignore?) and output dot messages to help debugging.